update nginx to use reverse proxies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,11 @@ services:
     depends_on:
       users-service:
         condition: service_started
+      web-service:
+        condition: service_started
     links:
       - users-service
+      - web-service
 
 
   web-service:
